--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,21 @@
     -moz-osx-font-smoothing: grayscale;
   }
 }
+
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  font-family: system-ui;
+  margin: 0;
+}
+
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
